crates/auto-ascii-eval/tests/snapshots/golden_grids__hard-cut_48x12_unicode.snap
---
source: crates/auto-ascii-eval/tests/golden_grids.rs
expression: s
---
hard-cut frame 40
term: 48x12  viewport: 43x12  pads: L2 R3 T0 B0
palette: unicode  fg: chroma
+------------------------------------------------+
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
|  ███████▓▓▓▓▓▓▓▓▒▒▒▒▒▒▒▒░░░░░░░········        |
+------------------------------------------------+
fg-fnv64 per row:
  0 480987577b67a978
  1 1341cd6546e842ef
  2 bd710a02d595ddf5
  3 86765a9d0797b3bc
  4 e93ee9701b1d7dbb
  5 889bfa8c3694078a
  6 cb174831a476df90
  7 c18d120549518f37
  8 de2ba8b77cc1bbaf
  9 35146e759b016f26
 10 0eb2922d269d927c
 11 087ad6d66983bf02
